Fix a bug in shader/program relationship.

A program can have two shaders attached in ES2/3. However, a linked program's
shaders may not be the current attached shaders to that program. Consider the
following sequence.

1) attach Shader1 and Shader2 to Program
2) link Program, succeed
3) detach Shader1 and Shader2 from Program
4) attach Shader3 and Shader4 to program

So after step 3, no shaders are attached to program. After step 4, Shader3 and
Shader4 are attached to Program, not Shader1 and Shader2. However, if we want
to use shaders to access information from Program, we still need to use Shader1
and Shader2.

BUG=735784
TEST=conformance2/uniforms/query-uniform-blocks-after-shader-detach.html
R=kbr@chromium.org
NOTRY=true
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2958763003
Cr-Commit-Position: refs/heads/master@{#482477}

Former-commit-id: 8e4a133d94d88ad3fcf2705fb45f16ab72b58092